--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,11 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+output/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -286,3 +288,4 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+/source/.vscode
