--- a/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
+++ b/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
@@ -5,7 +5,7 @@
         <Authors>Nikolay Zahariev</Authors>
         <Company>Zahasoft</Company>
         <Product>Zahasoft Skele</Product>
-        <Description>.NET Core library project template</Description>
+        <Description>.NET Core unit test project template</Description>
         <Copyright>Nikolay Zahariev</Copyright>
         <PackageProjectUrl>https://github.com/zahasoft/skele</PackageProjectUrl>
         <RepositoryUrl>https://github.com/zahasoft/skele</RepositoryUrl>
@@ -14,7 +14,7 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <OutputPath>..\..\output\</OutputPath>
-        <DocumentationFile>..\..\output\netstandard1.6\Zahasoft.Skele.Library.xml</DocumentationFile>
+        <DocumentationFile>..\..\output\netstandard1.6\Zahasoft.Skele.Test.xml</DocumentationFile>
         <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
         <TreatSpecificWarningsAsErrors />
         <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -25,7 +25,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+      <PackageReference Include="xunit" Version="2.2.0" />
+      <PackageReference Include="xunit.runner.console" Version="2.2.0" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
       <PackageReference Include="Zahasoft.Core" Version="2.1.3" />
     </ItemGroup>
 
