--- a/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
+++ b/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+      <PackageReference Include="Shouldly" Version="2.8.3" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
       <PackageReference Include="xunit" Version="2.2.0" />
       <PackageReference Include="xunit.runner.console" Version="2.2.0" />
