--- a/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
+++ b/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
@@ -25,13 +25,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+      <PackageReference Include="NSubstitute" Version="2.0.3" />
       <PackageReference Include="Shouldly" Version="2.8.3" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
       <PackageReference Include="xunit" Version="2.2.0" />
       <PackageReference Include="xunit.runner.console" Version="2.2.0" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-      <PackageReference Include="Zahasoft.Core" Version="2.1.3" />
+      <PackageReference Include="Zahasoft.Core" Version="2.1.4" />
     </ItemGroup>
 
     <ItemGroup>
