--- a/source/Zahasoft.Skele.Library/Zahasoft.Skele.Library.csproj
+++ b/source/Zahasoft.Skele.Library/Zahasoft.Skele.Library.csproj
@@ -1,23 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard1.6</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <Authors>Nikolay Zahariev</Authors>
         <Company>Zahasoft</Company>
-        <Product>Zahasoft Skele</Product>
-        <Description>.NET Core library project template</Description>
+        <Product>Zahasoft Skele Library</Product>
+        <Description>Dotnet core library project template</Description>
         <Copyright>Nikolay Zahariev</Copyright>
         <PackageProjectUrl>https://github.com/zahasoft/skele</PackageProjectUrl>
         <RepositoryUrl>https://github.com/zahasoft/skele</RepositoryUrl>
         <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <OutputPath>..\..\output\</OutputPath>
-        <DocumentationFile>..\..\output\netstandard1.6\Zahasoft.Skele.Library.xml</DocumentationFile>
-        <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+        <DocumentationFile>..\..\output\netstandard2.0\Zahasoft.Skele.Library.xml</DocumentationFile>
+        <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
         <TreatSpecificWarningsAsErrors />
-        <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
+        <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+        <WarningsAsErrors />
+        <NoWarn>1591;1701;1702;1705;SA1101;SA1309;SA1413</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -26,7 +29,7 @@
 
     <ItemGroup>
       <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
-      <PackageReference Include="Zahasoft.Core" Version="2.1.4" />
+      <PackageReference Include="Zahasoft.Core" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
