--- a/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
+++ b/source/Zahasoft.Skele.Test/Zahasoft.Skele.Test.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netcoreapp2.0</TargetFramework>
         <Authors>Nikolay Zahariev</Authors>
         <Company>Zahasoft</Company>
         <Product>Zahasoft Skele Test</Product>
-        <Description>Dotnet core unit test project template</Description>
+        <Description>.NET Core unit test project template
+
+Install with command dotnet new -i "Zahasoft.Skele.Test" or dotnet new -i "Zahasoft.Skele::*" for all  my templates.</Description>
         <Copyright>Nikolay Zahariev</Copyright>
         <PackageProjectUrl>https://github.com/zahasoft/skele</PackageProjectUrl>
         <RepositoryUrl>https://github.com/zahasoft/skele</RepositoryUrl>
         <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <ApplicationIcon />
+        <OutputType>Library</OutputType>
+        <StartupObject />
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
